fix(match2): misaligned text when row breaking (#6228)

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -687,6 +687,7 @@ div.brkts-popup-body-element-thumbs {
 	align-items: center;
 	justify-content: center;
 	gap: 4px;
+	text-align: center;
 }
 
 .brkts-popup-winloss-icon {
